# demo_githubmcp

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  clear_env_cache.py  main.py  mcp_tool_list.py  pyproject.toml  pytest.ini  run_tests.py  validate_setup.py
docker/: docker-compose.yaml
docs/: github_mcp_manual.md  project_manual.md
examples/: demo_github_agent_load.py  demo_github_operations.py  provider_switching_demo.py
src/agents/: github_agent.py
src/config/: parameters.py  settings.py
src/models/: __init__.py  azure_llm.py  base_provider.py  ollama_llm.py
src/prompts/: github_agent_prompts.yaml
src/registry/: mcp_client_config.json
src/services/: github_service.py  langfuse_service.py
src/tools/: github_tools.py
src/tools/mcp_client/: __init__.py  github_client.py  mcp_client.py
src/utils/: common.py  graph.py  nodes.py  prompt_loader.py  session_context.py  state.py
tests/: __init__.py  test_agent.py  test_environment.py  test_github_tools.py  test_langfuse_integration.py  test_langfuse_service.py  test_llm_providers.py  test_mcp_client.py  test_models.py  test_services.py  test_utils.py
